js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib2/GetB.kt
fun getObjectB() : B {
    return myObject
}
